--- a/style.css
+++ b/style.css
@@ -1,21 +1,85 @@
-body{
-    background-color:white;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 800px;
+    height: 600px;
+    perspective: 1000px; /* Set the perspective to 1000px */
+  }
+  
+  .card {
+    position: relative;
+    width: calc(33.33% - 20px);
+    height: 200px;
+    margin: 10px;
+    perspective: inherit; /* Inherit the perspective from the parent */
+    display: flex;
+    align-items: center;
+    padding:20px;
+}
+  
+  .card .cardFront,
+  .card .cardBack {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden; /* Hide the backface of the cards */
+    transition: transform 0.6s ease-in-out; /* Add a transition effect */
+  }
+  
+  .card .cardFront {
+    background-color: #f5f5f5;
+    transform: rotateY(0deg); /* Set the initial state of the front card */
+  }
+  
+  .card .cardBack {
+    background-color: #ddd;
+    transform: rotateY(180deg); /* Set the initial state of the back card */
+  }
+  
+  .card.flipped .cardFront {
+    transform: rotateY(180deg); /* Rotate the front card to reveal the back card */
+  }
+  
+  .card.flipped .cardBack {
+    transform: rotateY(0deg); /* Rotate the back card to reveal the front card */
+  }
+
+.class-name{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end; /* Align items to the right */
+    justify-content: space-between; /* Vertically space items evenly */
+    margin-right: 20px;
 }
 img{
-    max-width: 200px;
-    max-height: 200px;
-    text-align: right;
+    max-width: 20%;
+    height: auto;
 }
+p{
+    margin: 0;
+    flex: 1;
+}
+/* 
 h2{
     text-align: right;
 }
 p{
     text-align: left;
 }
+.card{
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(8ch auto);
+} */
+/* body{
+    background-color:white;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    
+}
+
 .card{
     background: rgb(88, 228, 241);
     width: 100%;
@@ -24,9 +88,7 @@ p{
     transition: transform 1s;
     transform-style: preserve-3d;
     cursor:pointer;
-    position: relative;
-    /* display: grid;
-    grid-template-columns: repeat(8ch auto); */
+ 
 }
 .card.is-flipped {
     transform: rotateY('180deg');
@@ -64,4 +126,4 @@ p{
 *{
     margin: 0;
     padding:0
-}
+} */
