--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+.h1{
+    align-content: right;
+}
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -60,70 +63,3 @@ p{
     margin: 0;
     flex: 1;
 }
-/* 
-h2{
-    text-align: right;
-}
-p{
-    text-align: left;
-}
-.card{
-    position: relative;
-    display: grid;
-    grid-template-columns: repeat(8ch auto);
-} */
-/* body{
-    background-color:white;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    
-}
-
-.card{
-    background: rgb(88, 228, 241);
-    width: 100%;
-    height: 100%;
-    margin: 100px auto 0;
-    transition: transform 1s;
-    transform-style: preserve-3d;
-    cursor:pointer;
- 
-}
-.card.is-flipped {
-    transform: rotateY('180deg');
-}
-
-.card{
-    padding: 0rem;
-    box-shadow: 0 0 .4rem .4rem black;
-
-}
-.card:hover{
-    background: grey;
-}
-.cardBack{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    overflow: hidden; 
-    transform: rotateY('180deg');
-}
-.cardFront{
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;   
-}
-
-*{
-    margin: 0;
-    padding:0
-} */
