--- a/style.css
+++ b/style.css
@@ -1,24 +1,25 @@
-.h1{
-    align-content: right;
-}
+
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 10px;
+    /* flex-wrap: wrap; */
+    justify-items: center;
     width: 800px;
     height: 600px;
-    perspective: 1000px; /* Set the perspective to 1000px */
+    perspective: 1000px; 
   }
   
   .card {
     position: relative;
-    width: calc(33.33% - 20px);
-    height: 200px;
+    width: 300px;
+    height: 400px;
     margin: 10px;
-    perspective: inherit; /* Inherit the perspective from the parent */
+    perspective: inherit; 
     display: flex;
     align-items: center;
     padding:20px;
+    /* overflow: auto; */
 }
   
   .card .cardFront,
@@ -26,38 +27,37 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    backface-visibility: hidden; /* Hide the backface of the cards */
-    transition: transform 0.6s ease-in-out; /* Add a transition effect */
+    backface-visibility: hidden; 
+    transition: transform 0.6s ease-in-out; 
   }
   
   .card .cardFront {
     background-color: #f5f5f5;
-    transform: rotateY(0deg); /* Set the initial state of the front card */
+    transform: rotateY(0deg); 
   }
   
   .card .cardBack {
     background-color: #ddd;
-    transform: rotateY(180deg); /* Set the initial state of the back card */
+    transform: rotateY(180deg); 
   }
   
   .card.flipped .cardFront {
-    transform: rotateY(180deg); /* Rotate the front card to reveal the back card */
+    transform: rotateY(180deg);
   }
   
   .card.flipped .cardBack {
-    transform: rotateY(0deg); /* Rotate the back card to reveal the front card */
+    transform: rotateY(0deg);
   }
 
 .class-name{
     display: flex;
     flex-direction: column;
-    align-items: flex-end; /* Align items to the right */
-    justify-content: space-between; /* Vertically space items evenly */
+    justify-content: space-between; 
     margin-right: 20px;
 }
 img{
-    max-width: 20%;
-    height: auto;
+    max-width: auto;
+    height: 200px;
 }
 p{
     margin: 0;
